<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/move_activity" />

    <Button
        android:id="@+id/btn_move_activity_with_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity_with_data"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial_number"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/btn_move_activity_with_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_result"
        android:layout_margin="20sp"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_activity"
        android:gravity="center"
        android:textSize="25sp"/>
</LinearLayout>